[gd_scene load_steps=7 format=3 uid="uid://04l7qkembmj2"]

[ext_resource type="Script" uid="uid://bdyutqb0ncenc" path="res://features/combat/character/base_character.gd" id="1_tm8wl"]
[ext_resource type="Script" uid="uid://8o3gctyd4ats" path="res://features/combat/skill/skill_manager.gd" id="2_qh5wp"]
[ext_resource type="Script" uid="uid://edxqbi2elab5" path="res://features/combat/buff/buff_manager.gd" id="3_43nuj"]
[ext_resource type="Script" uid="uid://cq4ouavb8gqem" path="res://features/combat/movement/base_character_movement.gd" id="4_jqlfx"]
[ext_resource type="Script" uid="uid://krc8q5gjc1ot" path="res://features/combat/attr/attr_manager.gd" id="5_3ax52"]

[sub_resource type="CircleShape2D" id="CircleShape2D_75idt"]
radius = 15.2971

[node name="CharacterBase" type="CharacterBody2D"]
script = ExtResource("1_tm8wl")
metadata/_custom_type_script = "uid://bdyutqb0ncenc"

[node name="SkillManager" type="Node" parent="."]
script = ExtResource("2_qh5wp")
metadata/_custom_type_script = "uid://8o3gctyd4ats"

[node name="BuffManager" type="Node" parent="."]
script = ExtResource("3_43nuj")

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_75idt")

[node name="Movement" type="Node" parent="."]
script = ExtResource("4_jqlfx")
metadata/_custom_type_script = "uid://cq4ouavb8gqem"

[node name="AttrManager" type="Node" parent="."]
script = ExtResource("5_3ax52")
